# vxi_dash

./: .dockerignore  .gitignore  Dockerfile.prod  E2E_TEST_SUMMARY.md  INTERACTIVE_TERMINAL_IMPLEMENTATION.md  LIVE_DASHBOARD_IMPLEMENTATION.md  README.md  STATE_MACHINE.md  STATE_MACHINE_ENGINE_IMPLEMENTATION.md  docker-compose.yml  run_services.sh
.github/: copilot-instructions.md
.github/workflows/: docker-build.yml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  vxi_dash.db
backend/app/: __init__.py  db.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  dashboard.py  health.py  instruments.py  monitoring.py  state_machine.py
backend/app/core/: config.py
backend/app/models/: __init__.py  instrument.py  monitoring.py  state_machine.py
backend/app/services/: __init__.py  data_collector.py  state_machine_engine.py  vxi11_client.py
backend/app/storage/: __init__.py  file_storage.py
backend/tests/: README.md  STATE_MACHINE_TESTS.md  test_e2e_flow.py  test_main.py  test_state_machine.py
data/: .gitignore  README.md  instruments.json
docs/: STATE_MACHINE_USER_GUIDE.md
frontend/: .eslintrc.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: App.test.tsx
frontend/src/services/: apiClient.ts  dashboardService.ts  dataService.ts  instrumentService.ts  monitoringService.ts
frontend/src/utils/: format.ts  (+1 more)
scripts/: build_frontend.sh  dev.ps1
(+28 files in other folders)
