[tool.poetry]
name = "vxi-dash-backend"
version = "0.1.0"
description = "Backend API for the VXI-11 Instrument Dashboard"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlmodel = "^0.0.16"
python-dotenv = "^1.0.0"
httpx = "^0.24.0"
pydantic-settings = "^2.6.0"
pydantic = "^2.7.0"
aiosqlite = "^0.20.0"
python-vxi11 = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.0"
ruff = "^0.6.0"
black = "^23.7.0"
isort = "^5.12.0"

[tool.ruff]
select = ["E", "F", "I"]
line-length = 100

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
